index.html correction

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Home</title>
   <style>
-    /* Tema escuro com fundo #1d2127 e texto claro */
     body {
       margin: 0;
       padding: 0;
@@ -109,15 +108,16 @@
       <p>
         Este é o meu espaço pessoal onde compartilho projetos, ideias e
         trabalhos. Navegue pelo menu acima para conhecer meu portfólio ou saber
-        mais sobre o Projeto X. Tudo criado com design simples e tema escuro
-        para garantir uma leitura confortável.
+        mais sobre meus projetos.
       </p>
     </div>
   </main>
 
   <footer>
     <p>© 2025 Guilherme Felipetto</p>
-    <p><a href="https://github.com/guilhermefelipetto">Meu GitHub</a></p>
+    <p><a href="https://github.com/guilhermefelipetto">GitHub</a></p>
+    <p><a href="http://lattes.cnpq.br/5022544975028340">Lattes</a></p>
+    <p><a href="https://www.linkedin.com/in/guilherme-felipetto-b21a33287/">LinkedIn</a></p>
   </footer>
 </body>
 </html>
