--- a/index.html
+++ b/index.html
@@ -3,121 +3,112 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Home</title>
+  <title>Guilherme Felipetto | Data Scientist</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
   <style>
+    :root {
+      --bg-color: #0f172a;
+      --text-color: #e2e8f0;
+      --accent-color: #38bdf8;
+      --secondary-text: #94a3b8;
+    }
+
     body {
       margin: 0;
       padding: 0;
-      background-color: #1d2127;
-      color: #f5f5f5;
-      font-family: Arial, sans-serif;
+      background-color: var(--bg-color);
+      color: var(--text-color);
+      font-family: 'Inter', sans-serif;
+      height: 100vh;
       display: flex;
       flex-direction: column;
-      min-height: 100vh;
-    }
-
-    header {
-      padding: 20px;
-      text-align: center;
-      border-bottom: 1px solid #333;
-    }
-
-    header h1 {
-      margin: 0;
-      font-size: 2rem;
-    }
-
-    nav {
-      margin-top: 10px;
-    }
-
-    nav ul {
-      list-style: none;
-      padding: 0;
-      display: flex;
       justify-content: center;
-      gap: 20px;
-    }
-
-    nav a {
-      color: #64b5f6;
-      text-decoration: none;
-      font-size: 1.1rem;
-    }
-
-    nav a:hover {
-      text-decoration: underline;
-    }
-
-    main {
-      flex: 1;
-      display: flex;
       align-items: center;
-      justify-content: center;
-      padding: 40px 20px;
       text-align: center;
+      overflow: hidden;
     }
 
-    .intro {
-      max-width: 600px;
+    .container {
+      padding: 20px;
+      animation: fadeIn 1.5s ease-out;
     }
 
-    .intro h2 {
-      margin-top: 0;
-      font-size: 1.8rem;
-      color: #e0e0e0;
+    h1 {
+      font-size: 3.5rem;
+      margin: 0;
+      font-weight: 700;
+      background: linear-gradient(to right, #38bdf8, #818cf8);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
     }
 
-    .intro p {
-      line-height: 1.6;
-      color: #ccc;
+    p.subtitle {
+      font-size: 1.2rem;
+      color: var(--secondary-text);
+      margin-top: 10px;
+      margin-bottom: 40px;
     }
 
-    footer {
-      padding: 15px;
-      text-align: center;
-      font-size: 0.9rem;
-      border-top: 1px solid #333;
-    }
-
-    footer a {
-      color: #64b5f6;
+    .btn {
+      display: inline-block;
+      padding: 15px 30px;
+      background-color: transparent;
+      border: 2px solid var(--accent-color);
+      color: var(--accent-color);
       text-decoration: none;
+      font-weight: 600;
+      border-radius: 50px;
+      transition: all 0.3s ease;
+      font-size: 1rem;
     }
 
-    footer a:hover {
-      text-decoration: underline;
+    .btn:hover {
+      background-color: var(--accent-color);
+      color: var(--bg-color);
+      box-shadow: 0 0 20px rgba(56, 189, 248, 0.4);
+      transform: translateY(-3px);
+    }
+
+    .social-links {
+      margin-top: 30px;
+      display: flex;
+      gap: 20px;
+      justify-content: center;
+    }
+
+    .social-links a {
+      color: var(--secondary-text);
+      text-decoration: none;
+      font-size: 0.9rem;
+      transition: color 0.3s;
+    }
+
+    .social-links a:hover {
+      color: var(--accent-color);
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @media (max-width: 600px) {
+      h1 { font-size: 2.5rem; }
     }
   </style>
 </head>
-
 <body>
-  <header>
-    <h1>Bem-vindo ao Meu Site</h1>
-    <nav>
-      <ul>
-        <li><a href="portifolio/">Portfólio</a></li>
-        <!-- <li><a href="projeto_x/">Projeto X</a></li> -->
-      </ul>
-    </nav>
-  </header>
+  <div class="container">
+    <h1>Guilherme Felipetto</h1>
+    <p class="subtitle">Cientista de Dados • Pesquisador • Desenvolvedor</p>
+    
+    <a href="portifolio/" class="btn">Acessar Portfólio & CV</a>
 
-  <main>
-    <div class="intro">
-      <h2>Olá, eu sou o Guilherme</h2>
-      <p>
-        Este é o meu espaço pessoal onde compartilho projetos, ideias e
-        trabalhos. Navegue pelo menu acima para conhecer meu portfólio ou saber
-        mais sobre meus projetos.
-      </p>
+    <div class="social-links">
+      <a href="https://github.com/guilhermefelipetto" target="_blank">GitHub</a>
+      <a href="https://www.linkedin.com/in/felipetto/" target="_blank">LinkedIn</a>
+      <a href="http://lattes.cnpq.br/5022544975028340" target="_blank">Lattes</a>
     </div>
-  </main>
-
-  <footer>
-    <p>© 2025 Guilherme Felipetto</p>
-    <p><a href="https://github.com/guilhermefelipetto">GitHub</a></p>
-    <p><a href="http://lattes.cnpq.br/5022544975028340">Lattes</a></p>
-    <p><a href="https://www.linkedin.com/in/guilherme-felipetto-b21a33287/">LinkedIn</a></p>
-  </footer>
+  </div>
 </body>
 </html>
