--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -418,12 +418,12 @@
           <span>Python</span>
           <span>C / C++</span>
           <span>Java</span>
+          <span>Node.js</span>
           <span>MLflow</span>
           <span>TensorFlow</span>
-          <span>Visão Computacional</span>
           <span>ETL & PSQL / MySQL</span>
+          <span>Visão Computacional</span>
           <span>Inglês Fluente</span>
-          <span>Node.js</span>
         </div>
       </div>
     </div>
@@ -540,15 +540,15 @@
     <div class="pub-grid">
 
       <!-- Artigo 1 -->
-      <a href="#" class="pub-card" target="_blank">
+      <a href="https://drive.google.com/file/d/1eKo0PecyzCCVQsrUKL_AMMACubwOFa8y/view?usp=sharing" class="pub-card" target="_blank">
         <div class="pub-thumb">
-          <img src="assets/controle-de-qualidade-avancado-na-industria-farmaceutica.png" alt="Miniatura do Artigo">
+          <i class="far fa-file-alt"></i>
         </div>
         <div class="pub-content">
-          <h3>Controle de Qualidade Avançado na Indústria Farmacêutica</h3>
-          <div class="pub-meta">Automação na Detecção de Desvios em Carimbos</div>
+          <h3>Controle de Qualidade Avançado na Indústria Farmacêutica - Automação na Detecção de Desvios em Carimbos</h3>
+          <div class="pub-meta">Congresso Interdisciplinar de Pesquisa e Inovação do Biopark II</div>
           <p class="pub-desc">
-            Publicado em anais de congresso. Aborda o uso de visão computacional para garantir a integridade e segurança de produtos farmacêuticos.
+            Publicado no congresso. Aborda o uso de visão computacional para garantir a integridade e segurança de produtos farmacêuticos.
           </p>
         </div>
       </a>
@@ -560,9 +560,9 @@
         </div>
         <div class="pub-content">
           <h3>Tecnologia Assistiva Multimodal para Interfaces Gráficas</h3>
-          <div class="pub-meta">Anais de Congressos (2025)</div>
+          <div class="pub-meta">Latinoware - Anais (2025) - Full Paper</div>
           <p class="pub-desc">
-            Coautores: Felipetto, G.; Tampelini, L. G.; Honorio, C. Descrição de interfaces gráficas para pessoas cegas.
+            Coautores: Felipetto, G.; Tampelini, L. G.; Honorio, C. Descrição de interfaces gráficas para pessoas cegas com visão computacional.
           </p>
         </div>
       </a>
@@ -575,11 +575,11 @@
     
     <div class="timeline-item">
       <div class="timeline-header">
-        <span class="role">Mestrado Acadêmico (Computer Programming)</span>
+        <span class="role">Mestrado Acadêmico (Ciência da Computação)</span>
         <span class="company">Universidade de São Paulo (IME-USP)</span>
       </div>
       <span class="date">Jun 2025 - Jun 2028 (Previsão)</span>
-      <p class="description">Pós-graduação Stricto Sensu. Foco em Inteligência Artificial e Visão Computacional.</p>
+      <p class="description">Pós-graduação Stricto Sensu. Foco em Visão Computacional.</p>
     </div>
 
     <div class="timeline-item">
@@ -597,7 +597,7 @@
         <span class="company">Faculdade Donaduzzi</span>
       </div>
       <span class="date">2023 - Jul 2025</span>
-      <p class="description">Ensino Superior. Base sólida em programação e análise de dados.</p>
+      <p class="description">Ensino Superior. Base sólida em programação (R, Python) e análise de dados.</p>
     </div>
   </section>
 
