--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -385,7 +385,7 @@
       <h1>Guilherme Felipetto</h1>
       <h2>Cientista de Dados | Mestrando IME-USP</h2>
       <p>
-        <strong>Guilherme Felipetto</strong> é Sócio-proprietário na YGG Tecnologia e Pesquisador no grupo BeeData (USP). É especialista em Visão Computacional, Python e C++.
+        <strong>Guilherme Felipetto</strong> é Sócio-proprietário na YGG Tecnologia e Pesquisador no grupo BeeData (IME-USP) e aluno do Programa de Pós-Graduação em Ciência da Computação na USP. É especialista em Visão Computacional, Python e C++.
       </p>
       
       <div style="margin-top: 15px;">
